--- a/public/Frontend/css/style.css
+++ b/public/Frontend/css/style.css
@@ -31,6 +31,7 @@ header #home-nav{
 .main-menu li a{
     display: block;
     color: white;
+    text-shadow: 0 5px 5px black;
     padding: 30px;
     text-decoration: none;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -60,6 +61,10 @@ header #home-nav{
 .search-box .user i{
     padding-top: 5px;
 }
+.search-box a{
+    color: black;
+    font-weight: bold;
+}
 .menu-trigger{
     width: 30px;
     height: 20px;
@@ -70,6 +75,7 @@ header #home-nav{
     position: absolute;
     display: block;
     background: white;
+    box-shadow: 0px 5px 5px black;
     width: 100%;
     height: 5px;
 }
