--- a/public/Frontend/css2/main.css
+++ b/public/Frontend/css2/main.css
@@ -1,5 +1,4 @@
-﻿
-/*************************
+﻿/*************************
 *******Typography******
 **************************/
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,300,400italic,500,700,100);
@@ -7,131 +6,137 @@
 @import url(http://fonts.googleapis.com/css?family=Abel);
 
 ul li {
-  list-style: none;
+    list-style: none;
 }
 
 a:hover {
-outline: none;
-text-decoration:none;
+    outline: none;
+    text-decoration: none;
 }
 
 a:focus {
-  outline:none;
-  outline-offset: 0;
+    outline: none;
+    outline-offset: 0;
 }
 
 a {
-  -webkit-transition: 300ms;
-  -moz-transition: 300ms;
+    -webkit-transition: 300ms;
+    -moz-transition: 300ms;
     -o-transition: 300ms;
     transition: 300ms;
 }
 
-.btn:hover, 
-.btn:focus{
-  outline: none;
-  box-shadow: none;
+.btn:hover,
+.btn:focus {
+    outline: none;
+    box-shadow: none;
 }
 
 .navbar-toggle {
-  background-color: #000;
+    background-color: #000;
 }
 
 a#scrollUp {
-  bottom: 0px;
-  right: 10px;
-  padding: 5px 10px;
-  background: #FE980F;
-  color: #FFF;
-  -webkit-animation: bounce 2s ease infinite;
-  animation: bounce 2s ease infinite;
+    bottom: 0px;
+    right: 10px;
+    padding: 5px 10px;
+    background: #fe980f;
+    color: #fff;
+    -webkit-animation: bounce 2s ease infinite;
+    animation: bounce 2s ease infinite;
 }
 
-a#scrollUp i{
-  font-size: 30px;
+a#scrollUp i {
+    font-size: 30px;
 }
 
 /*************************
 *******login page CSS******
 **************************/
+.btn-login-sigup {
+    font-family: "Courier New", Courier, monospace;
+    text-transform: uppercase;
+    border: none;
+    padding: 5px;
+    margin: 5px;
+    background-image: linear-gradient(
+        45deg,
+        #ff9a9e 0%,
+        #fad0c4 99%,
+        #fad0c4 100%
+    );
+    border-radius: 10px;
+    color: white;
+}
+.btn-login-sigup:hover{
+    color: #000;
+}
 
 #form {
-  display: block;
-  margin-bottom: 50px;
-  margin-top: 50px;
-  overflow: hidden;
+    background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
+}
+#form .row {
+    border: none;
+    border-radius: 50px;
+    box-shadow: 0px 0px 14px 0px grey;
+    margin: 10px;
+    padding: 15px;
+    text-align: center;
 }
 
-.login-form h2, .signup-form h2 {
-  color: #696763;
-  font-family: 'Roboto', sans-serif;
-  font-size: 20px;
-  font-weight: 300;
-  margin-bottom: 30px;
+.login-form h2,
+.signup-form h2 {
+    color: #696763;
+    font-family: "Roboto", sans-serif;
+    font-size: 20px;
+    font-weight: 300;
+    margin-bottom: 30px;
 }
 
-
-.login-form form input, .signup-form form input {
-  background: #F0F0E9;
-  border: medium none;
-  color: #696763;
-  display: block;
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-  font-weight: 300;
-  height: 40px;
-  margin-bottom: 10px;
-  outline: medium none;
-  padding-left: 10px;
-  width: 100%;
+.login-form form input,
+.signup-form form input {
+    background: #f0f0e9;
+    border: medium none;
+    color: #696763;
+    display: block;
+    font-family: "Roboto", sans-serif;
+    font-size: 14px;
+    font-weight: 300;
+    height: 40px;
+    margin-bottom: 10px;
+    outline: medium none;
+    padding-left: 10px;
+    width: 100%;
 }
 
-.login-form form span{
-  line-height: 25px;
+.login-form form span {
+    line-height: 25px;
 }
 
 .login-form form span input {
-  width: 15px;
-  float: left;
-  height: 15px;
-  margin-right: 5px;
+    width: 15px;
+    float: left;
+    height: 15px;
+    margin-right: 5px;
 }
 
 .login-form form button {
-  margin-top: 23px;
-}
-
-.login-form form button, .signup-form form button {
-  background: #f08080;
-  border: medium none;
-  border-radius: 0;
-  color: #FFFFFF;
-  display: block;
-  font-family: 'Roboto', sans-serif;
-  padding: 6px 25px;
+    margin-top: 23px;
 }
 
 .login-form label input {
-  border: medium none;
-  display: inline-block;
-  height: 0;
-  margin-bottom: 0;
-  outline: medium none;
-  padding-left: 0;
+    border: medium none;
+    display: inline-block;
+    height: 0;
+    margin-bottom: 0;
+    outline: medium none;
+    padding-left: 0;
 }
 
-
-.or{
-  background: #f08080;
-  border-radius: 40px;
-  color: #FFFFFF;
-  font-family: 'Roboto', sans-serif;
-  font-size: 16px;
-  height: 50px;
-  line-height: 50px;
-  margin-top: 75px;
-  text-align: center;
-  width: 50px;
+#form h2 {
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+        "Lucida Sans", Arial, sans-serif;
+    font-size: xx-large;
 }
 
 /*************************
@@ -139,462 +144,483 @@ a#scrollUp i{
 **************************/
 
 #do_action {
-  margin-bottom: 50px;
+    margin-bottom: 50px;
 }
 
 .breadcrumbs {
-  position: relative;
+    position: relative;
 }
 
 .breadcrumbs .breadcrumb {
-  background:transparent;
-  margin-bottom: 75px;
-  padding-left: 0;
+    background: transparent;
+    margin-bottom: 75px;
+    padding-left: 0;
 }
 
 .breadcrumbs .breadcrumb li a {
-  background:#FE980F;
-  color: #FFFFFF;
-  padding: 3px 7px;
+    background: #fe980f;
+    color: #ffffff;
+    padding: 3px 7px;
 }
 
 .breadcrumbs .breadcrumb li a:after {
-  content:"";
-  height:auto;
-  width: auto;
-  border-width: 8px;
-  border-style: solid;
-  border-color:transparent transparent transparent #FE980F;
-  position: absolute;
-  top: 11px;
-  left:48px;
-
+    content: "";
+    height: auto;
+    width: auto;
+    border-width: 8px;
+    border-style: solid;
+    border-color: transparent transparent transparent #fe980f;
+    position: absolute;
+    top: 11px;
+    left: 48px;
 }
 
 .breadcrumbs .breadcrumb > li + li:before {
-  content: " ";
+    content: " ";
 }
 
 #cart_items .cart_info {
-  border: 1px solid #E6E4DF;
-  margin-bottom: 50px;
-  margin-top: 20px;
+    border: 1px solid #e6e4df;
+    margin-bottom: 50px;
+    margin-top: 20px;
+    overflow-x: unset;
+}
+#cart_items p{
+    margin: 0px;
 }
 
+#cart_items h3 {
+    text-align: center;
+    margin-top: 20px;
+}
 
 #cart_items .cart_info .cart_menu {
-  background: lightcoral;
-  color: #fff;
-  font-size: 16px;
-  font-family: 'Roboto', sans-serif;
-  font-weight: normal;
+    background: lightcoral;
+    color: #fff;
+    font-size: 16px;
+    font-family: "Roboto", sans-serif;
+    font-weight: normal;
 }
 
 #cart_items .cart_info .table.table-condensed thead tr {
-  height: 51px;
+    height: 51px;
 }
 
-
 #cart_items .cart_info .table.table-condensed tr {
-  border-bottom: 1px solid#F7F7F0
+    border-bottom: 1px solid#F7F7F0;
 }
 
 #cart_items .cart_info .table.table-condensed tr:last-child {
-  border-bottom: 0
+    border-bottom: 0;
 }
 
 .cart_info table tr td {
-  border-top: 0 none;
-  vertical-align: inherit;
+    border-top: 0 none;
+    vertical-align: inherit;
 }
-
 
 #cart_items .cart_info .image {
-  padding-left: 30px;
+    padding-left: 30px;
 }
 
-
 #cart_items .cart_info .cart_description h4 {
-  margin-bottom: 0
+    margin-bottom: 0;
 }
 
 #cart_items .cart_info .cart_description h4 a {
-  color: #363432;
-  font-family: 'Roboto',sans-serif;
-  font-size: 20px;
-  font-weight: normal;
-
+    color: #363432;
+    font-family: "Roboto", sans-serif;
+    font-size: 20px;
+    font-weight: normal;
 }
 
 #cart_items .cart_info .cart_description p {
-  color:#696763
+    color: #696763;
 }
-
 
 #cart_items .cart_info .cart_price p {
-  color:#696763;
-  font-size: 18px
+    color: red;
+    font-size: 18px;
 }
 
-
 #cart_items .cart_info .cart_total_price {
-  color: #FE980F;
-  font-size: 24px;
+    color: red;
+    font-size: 24px;
 }
 
 .cart_product {
-  display: block;
-  margin: 15px -70px 10px 25px;
+    display: block;
+    margin: 15px -70px 10px 25px;
 }
 
 .cart_quantity_button a {
-  background:#F0F0E9;
-  color: #696763;
-  display: inline-block;
-  font-size: 16px;
-  height: 28px;
-  overflow: hidden;
-  text-align: center;
-  width: 35px;
-  float: left;
+    background: #f0f0e9;
+    color: #696763;
+    display: inline-block;
+    font-size: 16px;
+    height: 28px;
+    overflow: hidden;
+    text-align: center;
+    width: 35px;
 }
 
+.cart_quantity_button .btn-sm{
+    margin-left: 10px;
+    border: none;
+    background: lightcoral;
+}
 
 .cart_quantity_input {
-  color: #696763;
-  float: left;
-  font-size: 16px;
-  text-align: center;
-  font-family: 'Roboto',sans-serif;
-  
+    color: #696763;
+    float: left;
+    font-size: 16px;
+    text-align: center;
+    font-family: "Roboto", sans-serif;
 }
 
-
-.cart_delete  {
-  display: block;
-  margin-right: -12px;
-  overflow: hidden;
+.cart_delete {
+    display: block;
+    margin-right: -12px;
+    overflow: hidden;
 }
-
 
 .cart_delete a {
-  background:#F0F0E9;
-  color: #FFFFFF;
-  padding: 5px 7px;
-  font-size: 16px
+    background: lightcoral;
+    color: white;
+    padding: 5px 7px;
+    font-size: 16px;
 }
 
 .cart_delete a:hover {
-  background:#FE980F
+    background: aquamarine;
 }
 
-
 .bg h2.title {
-  margin-right:0;
-  margin-left:0;
-  margin-top: 0;
+    margin-right: 0;
+    margin-left: 0;
+    margin-top: 0;
 }
 
 .heading h3 {
-  color: #363432;
-  font-size: 20px;
-  font-family: 'Roboto', sans-serif;
+    color: #363432;
+    font-size: 20px;
+    font-family: "Roboto", sans-serif;
 }
 
 .heading p {
-  color: #434343;
-  font-size: 16px;
-  font-weight: 300;
+    color: #434343;
+    font-size: 16px;
+    font-weight: 300;
 }
-
 
 #do_action .total_area {
-  padding-bottom: 18px !important;
+    padding-bottom: 18px !important;
 }
 
-#do_action .total_area, #do_action .chose_area {
-  border: 1px solid #E6E4DF;
-  color: #696763;
-  padding: 30px 25px 30px 0;
-  margin-bottom: 80px;
+#do_action .total_area,
+#do_action .chose_area {
+    border: 1px solid lightcoral;
+    border-radius: 10px;
+    color: #696763;
+    padding: 30px 25px 30px 25px;
+    margin-bottom: 80px;
 }
 
 .total_area span {
-  float: right;
+    float: right;
 }
 
 .total_area ul li {
-  background:#E6E4DF;
-  color: #696763;
-  margin-top: 10px;
-  padding: 7px 20px;
+    background: #e6e4df;
+    color: #696763;
+    margin-top: 10px;
+    padding: 7px 20px;
 }
 
+/*check-cart*/
+.check-cart{
+    text-align: center;
+}
 
 .user_option label {
-  color: #696763;
-  font-weight: normal;
-  margin-left: 10px;
+    color: #696763;
+    font-weight: normal;
+    margin-left: 10px;
 }
 
-
 .user_info {
-  display: block;
-  margin-bottom: 15px;
-  margin-top: 20px;
-  overflow: hidden;
+    display: block;
+    margin-bottom: 15px;
+    margin-top: 20px;
+    overflow: hidden;
 }
 
 .user_info label {
-  color: #696763;
-  display: block;
-  font-size: 15px;
-  font-weight: normal;
-
+    color: #696763;
+    display: block;
+    font-size: 15px;
+    font-weight: normal;
 }
 
 .user_info .single_field {
-  width: 31%
+    width: 31%;
 }
 
 .user_info .single_field.zip-field input {
-  background: transparent;
-  border: 1px solid#F0F0E9
+    background: transparent;
+    border: 1px solid#F0F0E9;
 }
 
 .user_info > li {
-  float: left;
-  margin-right: 10px;
+    float: left;
+    margin-right: 10px;
 }
 
-.user_info input, select, textarea {
-  background: #F0F0E9;
-  border:0;
-  color: #696763;
-  padding: 5px;
-  width: 100%;
-  border-radius: 0;
-  resize: none
+.user_info input,
+select,
+textarea {
+    background: #f0f0e9;
+    border: 0;
+    color: #696763;
+    padding: 5px;
+    width: 100%;
+    height: 160px;
+    border-radius: 0;
+    resize: none;
 }
 
 .user_info select:focus {
-  border: 0
+    border: 0;
 }
-
 
 .chose_area .update {
-  margin-left: 40px;
-}
-
-.update, .check_out {
-  background: lightcoral;
-  border-radius: 0;
-  color: #FFFFFF;
-  margin-top: 18px;
-  border: none;
-  padding: 5px 15px;
-}
-.update{
     margin-left: 40px;
 }
 
+.update,
 .check_out {
-  margin-left: 20px
+    background-image: linear-gradient(
+        45deg,
+        #ff9a9e 0%,
+        #fad0c4 99%,
+        #fad0c4 100%
+    );
+    border-radius: 10px;
+    color: white;
 }
-
-
+.update {
+    margin-left: 40px;
+}
 
 /*************************
 *******checkout CSS******
 **************************/
 
 .step-one {
-  margin-bottom: -10px
+    margin-bottom: -10px;
 }
 
-.register-req, .step-one .heading {
-  background: none repeat scroll 0 0 #F0F0E9;
-  color: #363432;
-  font-size: 20px;
-  margin-bottom: 35px;
-  padding: 10px 25px;
-  font-family: 'Roboto', sans-serif;
+.register-req,
+.step-one .heading {
+    background: none repeat scroll 0 0 #f0f0e9;
+    color: #363432;
+    font-size: 20px;
+    margin-bottom: 35px;
+    padding: 10px 25px;
+    font-family: "Roboto", sans-serif;
 }
 
 .checkout-options {
-  padding-left: 20px
+    padding-left: 20px;
 }
 
-
 .checkout-options h3 {
-  color: #363432;
-  font-size: 20px;
-  margin-bottom: 0;
-  font-weight: normal;
-  font-family: 'Roboto', sans-serif;
+    color: #363432;
+    font-size: 20px;
+    margin-bottom: 0;
+    font-weight: normal;
+    font-family: "Roboto", sans-serif;
 }
 
 .checkout-options p {
-  color: #434343;
-  font-weight: 300;
-  margin-bottom: 25px;
+    color: #434343;
+    font-weight: 300;
+    margin-bottom: 25px;
 }
 
 .checkout-options .nav li {
-  float: left;
-  margin-right: 45px;
-  color: #696763;
-  font-size: 18px;
-  font-family: 'Roboto', sans-serif;
-  font-weight: normal;
+    float: left;
+    margin-right: 45px;
+    color: #696763;
+    font-size: 18px;
+    font-family: "Roboto", sans-serif;
+    font-weight: normal;
 }
 
 .checkout-options .nav label {
-  font-weight: normal;
+    font-weight: normal;
 }
 
 .checkout-options .nav li a {
-  color: #FE980F;
-  font-size: 18px;
-  font-weight: normal;
-  padding: 0
+    color: #fe980f;
+    font-size: 18px;
+    font-weight: normal;
+    padding: 0;
 }
 
 .checkout-options .nav li a:hover {
-  background: inherit;
+    background: inherit;
 }
 
 .checkout-options .nav i {
-  margin-right: 10px;
-  border-radius: 50%;
-  padding: 5px;
-  background: #FE980F;
-  color:#fff;
-  font-size: 14px;
-  padding: 2px 3px;
+    margin-right: 10px;
+    border-radius: 50%;
+    padding: 5px;
+    background: #fe980f;
+    color: #fff;
+    font-size: 14px;
+    padding: 2px 3px;
 }
 
-
-.register-req  {
-  font-size: 14px;
-  font-weight: 300;
-  padding: 15px 20px;
-  margin-top: 35px;
-
+.register-req {
+    font-size: 14px;
+    font-weight: 300;
+    padding: 15px 20px;
+    margin-top: 35px;
 }
 
 .register-req p {
-  margin-bottom: 0
+    margin-bottom: 0;
 }
 
-
-.shopper-info p, 
-.bill-to p, 
+.shopper-info p,
+.bill-to p,
 .order-message p {
-  color: #696763;
-  font-size: 20px;
-  font-weight: 300
+    color: #696763;
+    font-size: 20px;
+    font-weight: 300;
 }
-
 
 .shopper-info .btn-primary {
-  background: #FE980F;
-  border: 0 none;
-  border-radius: 0;
-  margin-right: 15px;
-  margin-top: 20px;
+    background: #fe980f;
+    border: 0 none;
+    border-radius: 0;
+    margin-right: 15px;
+    margin-top: 20px;
 }
 
-
-.form-two, .form-one {
-  float: left;
-  width: 47%
+.form-two,
+.form-one {
+    float: left;
+    width: 47%;
 }
 
-.form-one .btn{
-  background: lightcoral;
+.form-one .btn {
+    background: lightcoral;
 }
 
-
-.shopper-info > form > input, 
-.form-two > form > select, 
-.form-two > form > input, 
+.shopper-info > form > input,
+.form-two > form > select,
+.form-two > form > input,
 .form-one > form > input {
-  background:#F0F0E9;
-  border: 0 none;
-  margin-bottom:10px;
-  padding: 10px;
-  width: 100%;
-  font-weight: 300
+    background: #f0f0e9;
+    border: 0 none;
+    margin-bottom: 10px;
+    padding: 10px;
+    width: 100%;
+    font-weight: 300;
 }
 
 .form-two > form > select {
-  padding:10px 5px
+    padding: 10px 5px;
 }
 
 .form-two {
-  margin-left: 5%
+    margin-left: 5%;
 }
 
-
 .order-message textarea {
-  font-size: 12px;
-  height: 335px;
-  margin-bottom: 20px;
-  padding: 15px 20px;
+    font-size: 12px;
+    height: 335px;
+    margin-bottom: 20px;
+    padding: 15px 20px;
 }
 
 .order-message label {
-  font-weight:300;
-  color: #696763;
-  font-family: 'Roboto', sans-serif;
-  margin-left: 10px;
-  font-size: 14px
+    font-weight: 300;
+    color: #696763;
+    font-family: "Roboto", sans-serif;
+    margin-left: 10px;
+    font-size: 14px;
 }
 
-
 .review-payment h2 {
-  color: #696763;
-  font-size: 20px;
-  font-weight: 300;
-  margin-top: 45px;
-  margin-bottom: 20px
+    color: #696763;
+    font-size: 20px;
+    font-weight: 300;
+    margin-top: 45px;
+    margin-bottom: 20px;
 }
 
 .payment-options {
-  margin-bottom:125px;
-  margin-top: -25px
+    margin-bottom: 125px;
+    margin-top: -25px;
 }
 
 .payment-options span label {
-  color: #696763;
-  font-size: 14px;
-  font-weight: 300;
-  margin-right: 30px;
+    color: #696763;
+    font-size: 14px;
+    font-weight: 300;
+    margin-right: 30px;
 }
 
-#cart_items .cart_info 
-.table.table-condensed.total-result {
-  margin-bottom: 10px;
-  margin-top: 35px;
-  color: #696763
+#cart_items .cart_info .table.table-condensed.total-result {
+    margin-bottom: 10px;
+    margin-top: 35px;
+    color: #696763;
 }
 
-#cart_items .cart_info 
-.table.table-condensed.total-result tr {
-  border-bottom: 0
+#cart_items .cart_info .table.table-condensed.total-result tr {
+    border-bottom: 0;
 }
 
-#cart_items .cart_info 
-.table.table-condensed.total-result span {
-  color: #FE980F;
-  font-weight: 700;
-  font-size: 16px
+#cart_items .cart_info .table.table-condensed.total-result span {
+    color: #fe980f;
+    font-weight: 700;
+    font-size: 16px;
 }
 
-#cart_items .cart_info 
-.table.table-condensed.total-result 
-.shipping-cost {
-  border-bottom: 1px solid #F7F7F0;
+#cart_items .cart_info .table.table-condensed.total-result .shipping-cost {
+    border-bottom: 1px solid #f7f7f0;
 }
 
+/*deli*/
+#form-deli .row {
+    border: none;
+    border-radius: 50px;
+    box-shadow: 0px 0px 14px 0px grey;
+    margin: 10px;
+    padding: 15px;
+    text-align: center;
+}
+.bill-to {
+    display: flex;
+}
+.bill-to img {
+    width: 495px;
+    height: 456px;
+    margin-left: 40px;
+}
+.bill-to .btn-sm {
+    background-image: linear-gradient(
+        45deg,
+        #ff9a9e 0%,
+        #fad0c4 99%,
+        #fad0c4 100%
+    );
+    border-radius: 10px;
+    color: white;
+}
+.btn-sm:hover{
+    color: #000;
+}
