--- a/public/Frontend/css/style.css
+++ b/public/Frontend/css/style.css
@@ -274,6 +274,7 @@ body {
     background-size: cover;
     text-shadow: 0 5px 5px lightcoral;
 }
+
 #introduce3 .unknow {
     width: 150px;
     padding: 20px 0;
@@ -396,10 +397,12 @@ footer {
     background: #ce3c2d;
 }
 #opening-time {
+    font-weight: bold;
     color: maroon;
     font-family: Arial, Helvetica, sans-serif;
 }
 #opening-time h2 {
+    font-weight: bold;
     text-transform: uppercase;
 }
 .contact p {
